--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -1,5 +1,5 @@
 {
-  "nav": {
+"nav": {
     "home": "首页",
     "services": "我们的服务",
     "about": "关于我们",
@@ -7,6 +7,8 @@
     "advantage": "优势",
     "globalPresence": "全球业务",
     "contact": "联系我们",
+    "contactUs": "联系我们",
+    "joinUs": "加入我们",
     "switchcountry": "切换国家"
   },
  "hero": {
